--- a/templates/blog2.html
+++ b/templates/blog2.html
@@ -30,7 +30,7 @@ Ask about our seasonal care plans — and let us handle the details. <br>
 <br>
         <h3  class="xerrh">READY?</h3>
       <p  class="xerrp">Get started with year-round care. <br> Only $125 a season.</p>
-<p class="xerrpp"><a class="xerrpa" href="https://forms.fillout.com/t/uiJ6eR9pNMus">REGISTER</a></p>
+<p class="xerrpp"><a class="xerrpa" href="https://forms.fillout.com/t/1aNCzvH97aus">REGISTER</a></p>
     </div>
 <br><br>
   </div>
