--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
     <br>
     <img src="{% static 'images/ologo.png'%}" class="ologo">
     <p>The grave cleaning & decorating<br>subscription service</p>
-    <a class="overlay-a-button" href="https://forms.fillout.com/t/uiJ6eR9pNMus" style="z-index:3;">REGISTER</a>
+    <a class="overlay-a-button" href="https://forms.fillout.com/t/1aNCzvH97aus" style="z-index:3;">REGISTER</a>
     <br>
     <span class="overlay-span-1"><span  class="overlay-span-2"><b>*</b></span> Membership is only $125 a season.</span>
 
