--- a/templates/howitworks.html
+++ b/templates/howitworks.html
@@ -47,7 +47,7 @@
 <br>
         <h3 class="lkasdfx">READY?</h3>
       <p class="lkasdfxp">Get started with year-round care. <br> Only $125 a season.</p>
-<p class="lkasdfxpp"><a class="lkasdfxppa" href="https://forms.fillout.com/t/uiJ6eR9pNMus">REGISTER</a></p>
+<p class="lkasdfxpp"><a class="lkasdfxppa" href="https://forms.fillout.com/t/1aNCzvH97aus">REGISTER</a></p>
     </div> <br> <br>
   </div>
     </div> <!-- content -->
