--- a/templates/locations.html
+++ b/templates/locations.html
@@ -85,7 +85,7 @@
         <h3 class="gbsd">READY?
 </h3>
       <p class="gbdsd">Get started with year-round care. <br> Only $125 a season.</p>
-<p class="gbdsp"><a class="gbdspa" href="https://forms.fillout.com/t/uiJ6eR9pNMus">REGISTER</a></p>
+<p class="gbdsp"><a class="gbdspa" href="https://forms.fillout.com/t/1aNCzvH97aus">REGISTER</a></p>
     </div> 
  <br/> <br/> <br/>
   </div>
