--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
                     </div>
                         <div class="n-r-c-w">
                         <div class="n-r-c">
-                        <a href="https://forms.fillout.com/t/uiJ6eR9pNMus"  class="n-b-2"><div>REGISTER</div></a>
+                        <a href="https://forms.fillout.com/t/1aNCzvH97aus"  class="n-b-2"><div>REGISTER</div></a>
                         </div>
 
                         <label for="menu" class="m-b">&#9776;</label>
@@ -42,7 +42,7 @@
                     <ul><li><a href="/how-it-works/">HOW IT WORKS</a></li>
                          <ul><li><a href="/blog/">BLOG</a></li>
                              <ul><li><a href="/locations/">LOCATIONS</a></li>
-                     <li><a href="https://forms.fillout.com/t/uiJ6eR9pNMus" class="collapsible-menu-button-bg" >REGISTER</a></li>
+                     <li><a href="https://forms.fillout.com/t/1aNCzvH97aus" class="collapsible-menu-button-bg" >REGISTER</a></li>
                     </ul>
                 </div>
             </div>
